# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\ExampleController;
+use App\Http\Controllers\UserController;
 
 Route::get('/example', [ExampleController::class, 'index']);
 Route::post('/register', [AuthController::class, 'register']);
@@ -19,4 +20,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/user', function (Request $request) {
         return $request->user();
     });
+    Route::get('users', [UserController::class, 'index']);
+    Route::put('/user/update-profile', [UserController::class, 'updateProfile']);
+    Route::put('/user/avatar', [UserController::class, 'updateAvatar']); 
+    Route::delete('/user/{id}', [UserController::class, 'destroy']); 
 });
